tests/invalid_syntax/test_missing_lbrace.aphi
/*
Parser error: Missing opening brace in procedure body.
*/

procedure main
    x = 1;
}
